fix: remove all unused route and update the doc
